# mycms

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-image.yml
docker/: Caddyfile  docker-compose.yaml
mysite/: .dockerignore  Dockerfile
mysite/docs/: index.md
mysite/home/: models.py
mysite/home/migrations/: 0003_homepage_body.py  0004_aboutpage_branddesignpage_copywriterpage_and_more.py  0005_contactuspage.py  0006_alter_aboutpage_options_and_more.py  0007_pagegalleryimage_describe.py  0008_homepage_describe_pagegalleryimage_industry.py  0009_caseitempage_remove_homepage_describe_and_more.py  0010_alter_pagegalleryimage_page.py  0011_remove_newspage_body.py  0012_aboutpage_team_image_loggalleryimage.py  0013_caseitempage_body.py  0014_contactuspage_addr_contactuspage_email_and_more.py  0015_caseitempage_is_home_item.py  0016_caseitempage_is_home_item_row0_and_more.py  0017_rename_is_home_item_row0_caseitempage_is_home_item_left_and_more.py  0018_hometitle.py  0019_alter_hometitle_describe.py  0020_alter_hometitle_page.py  0021_remove_hometitle_describe_hometitle_text_row1_and_more.py  0022_alter_hometitle_page.py  0023_remove_hometitle_page.py  0024_remove_copywriterpage_page_ptr_and_more.py  0025_aboutpage_logo_image_delete_loggalleryimage.py
mysite/home/templates/home/: about_page.html  case_item_page.html  cases_carousel.html  contact_us_page.html  home_card_0.html  home_carousel_sm.html  home_connect.html  home_page.html  home_wenan_sm.html  home_work_case_item.html  news_item_page.html  news_page.html  (+3 more)
mysite/mysite/settings/: base.py  dev.py  production.py
mysite/mysite/templates/: base.html  footer.html  nav.html  nav_li.html
mysite/theme/static_src/: package-lock.json  tailwind.config.js
src/mycms/: __init__.py
src/try_wagtail/: __init__.py
(+2 files in other folders)
