[project]
name = "try-wagtail"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "pingfury", email = "pingfury@outlook.com" }
]
dependencies = [
    "wagtail>=6.3.1",
    "django>=5.1, <5.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/try_wagtail"]
