[project]
name = "mycms"
version = "0.1.0"
description = "MyCMS"
authors = [
    { name = "pingfury", email = "pingfury@outlook.com" }
]
dependencies = [
    "wagtail>=6.3.1",
    "django>=5.1, <5.2",
    "django-tailwind[reload]>=3.8.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "django-stubs>=5.1.1",
    "pip>=24.3.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mycms"]

[tool.pyright]
extraPaths = [".venv/lib/python3.12/"]
